--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
 
     <groupId>th.co.geniustree</groupId>
     <artifactId>dolphin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>dalphin</name>
+    <name>dolphin</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
