--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
-        
+          <dependency>
+            <groupId>javax.el</groupId>
+            <artifactId>javax.el-api</artifactId>
+            <version>2.2.4</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
